Introduce flatten for Fetch query parameter, query object-mapper don't flatten the extracted value